# hipaa-query-validator

./: .gitignore  CHANGELOG.md  CLAUDE.md  ISSUE_CLOSURE_PROTOCOL.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: audit.yaml.example  prompt_patterns.yaml  validator.yaml.example
config/schemas/: omop_5.4.yaml  phi_identifiers.yaml
container/: Containerfile  requirements.txt
docs/: implementation-notes.md
src/: __init__.py  educational.py  enforcer.py  errors.py  models.py  validator.py
src/audit/: __init__.py  events.py  logger.py
src/container/: __init__.py  cleanup.py  executor.py  runner.py
src/sample_data/: __init__.py  generator.py
src/schemas/: __init__.py  loader.py
src/validators/: __init__.py  aggregation.py  ascii_input.py  ascii_output.py  phi.py  prompt_injection.py  sample_execution.py  schema.py
tests/: __init__.py
tests/integration/: __init__.py  test_container_lifecycle.py  test_end_to_end.py
tests/unit/: __init__.py  test_aggregation.py  test_ascii_input.py  test_ascii_output.py  test_audit_logger.py  test_phi.py  test_prompt_injection.py  test_sample_execution.py  test_schema.py  test_schema_loader.py  test_validator.py
